[metadata]
name = commonvoice_pinyin
version = 1.1.2
author = Rongcui Dong
author_email = rongcuid@outlook.com
description = Common Voice Chinese dataset for PyTorch, Pinyin, and TTS
long_description = file: README.adoc
long_description_content_type = text/plain
url = https://github.com/rongcuid/commonvoice_pinyin
project_urls =
    Bug Tracker = https://github.com/rongcuid/commonvoice_pinyin
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires =
    torch
    torchaudio
    pandas
    diskcache
    librosa
    pypinyin
